Prevent names from wrapping underneath avatar on user rows Resolves #126

--- a/app/assets/stylesheets/modules/_tables.styl
+++ b/app/assets/stylesheets/modules/_tables.styl
@@ -31,6 +31,7 @@ table
     height 40px
     padding 15px 0
     vertical-align middle
+    white-space nowrap
     &:first-child
       padding-left 15px
       float left
